eagle_test/error/super_error.eagle
var b = super.b;
// expected: [Error at line 1] At 'super': Can't use 'super' keyword outside class